Fixed sequencing errors for 2.8/en
Signed-off-by: Gunasekhar Matamalam <gunasekhar.matamalam@suse.com>

--- a/versions/v2.8/modules/en/pages/cluster-admin/project-admin/project-administration.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/project-admin/project-administration.adoc
@@ -20,7 +20,7 @@ You can use projects to perform actions like:
 * xref:../../observability/rancher-project-tools.adoc[Configure tools]
 * xref:pod-security-policies.adoc[Configure pod security policies]
 
-=== Authorization
+== Authorization
 
 Non-administrative users are only authorized for project access after an xref:../../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[administrator], link:../../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#cluster-roles[cluster owner or member], or link:../../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#project-roles[project owner] adds them to the project's *Members* tab.
 
