--- a/versions/v2.8/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/override-default-limit-in-namespaces.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/project-admin/project-resource-quotas/override-default-limit-in-namespaces.adoc
@@ -11,7 +11,7 @@ image:rancher-resource-quota-override.svg[Namespace Default Limit Override]
 
 How to: xref:../../manage-clusters/projects-and-namespaces.adoc[Editing Namespace Resource Quotas]
 
-=== Editing Namespace Resource Quotas
+== Editing Namespace Resource Quotas
 
 If there is a resource quota configured for a project, you can override the namespace default limit to provide a specific namespace with access to more (or less) project resources.
 
