--- a/versions/v2.8/modules/en/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/cluster-deployment.adoc
@@ -7,7 +7,7 @@ This section assumes a basic familiarity with Docker and Kubernetes. For a brief
 
 For a conceptual overview of how the Rancher server provisions clusters and what tools it uses to provision them, refer to the xref:../about-rancher/architecture/architecture.adoc[architecture] page.
 
-=== Cluster Management Capabilities by Cluster Type
+== Cluster Management Capabilities by Cluster Type
 
 The following table summarizes the options and settings available for each cluster type:
 
