--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
@@ -2,27 +2,27 @@
 
 For more details about EC2 nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].
 
-=== Region
+== Region
 
 The geographical https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html[region] in which to build your cluster.
 
-=== Zone
+== Zone
 
 The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html#concepts-availability-zones[zone], an isolated location within a region to build your cluster
 
-=== Instance Type
+== Instance Type
 
 The https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html[instance type], which determines the hardware characteristics, used to provision your cluster.
 
-=== Root Disk Size
+== Root Disk Size
 
 Configure the size (in GB) for your https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/RootDeviceStorage.html[root device].
 
-=== VPC/Subnet
+== VPC/Subnet
 
 The https://docs.aws.amazon.com/vpc/latest/userguide/configure-your-vpc.html[VPC] or specific https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html[subnet], an IP range in your VPC, to add your resources to.
 
-=== IAM Instance Profile Name
+== IAM Instance Profile Name
 
 The name of the https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html[instance profile] used to pass an IAM role to an EC2 instance.
 
