--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/node-template-configuration.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/node-template-configuration.adoc
@@ -2,11 +2,11 @@
 
 For more details about EC2, nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].
 
-=== Region
+== Region
 
 In the *Region* field, select the same region that you used when creating your cloud credentials.
 
-=== Cloud Credentials
+== Cloud Credentials
 
 Your AWS account access information, stored in a xref:../../../rancher-admin/users/settings/manage-cloud-credentials.adoc[cloud credential.]
 
@@ -22,11 +22,11 @@ See our three example JSON policies:
 * link:aws.adoc#example-iam-policy-with-passrole[Example IAM Policy with PassRole] (needed if you want to use xref:../../set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider] or want to pass an IAM Profile to an instance)
 * link:aws.adoc#example-iam-policy-to-allow-encrypted-ebs-volumes[Example IAM Policy to allow encrypted EBS volumes] policy to an user.
 
-=== Authenticate & Configure Nodes
+== Authenticate & Configure Nodes
 
 Choose an availability zone and network settings for your cluster.
 
-=== Security Group
+== Security Group
 
 Choose the default security group or configure a security group.
 
@@ -34,12 +34,12 @@ Please refer to link:../../../installation-and-upgrade/requirements/port-require
 
 If you provide your own security group for an EC2 instance, please note that Rancher will not modify it. As such, you will be responsible for ensuring that your security group is set to allow the link:../../../installation-and-upgrade/requirements/port-requirements.adoc#ports-for-rancher-server-nodes-on-rke[necessary ports for Rancher to provision the instance]. For more information on controlling inbound and outbound traffic to EC2 instances with security groups, refer https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html#WorkingWithSecurityGroups[here].
 
-=== Instance Options
+== Instance Options
 
 Configure the instances that will be created. Make sure you configure the correct *SSH User* for the configured AMI. It is possible that a selected region does not support the default instance type. In this scenario you must select an instance type that does exist, otherwise an error will occur stating the requested configuration is not supported.
 
 If you need to pass an *IAM Instance Profile Name* (not ARN), for example, when you want to use a xref:../../set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider], you will need an additional permission in your policy. See link:aws.adoc#example-iam-policy-with-passrole[Example IAM policy with PassRole] for an example policy.
 
-=== Engine Options
+== Engine Options
 
 In the *Engine Options* section of the node template, you can configure the container daemon. You may want to specify the container version or a container image registry mirror.
