--- a/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/azure/machine-configuration.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/azure/machine-configuration.adoc
@@ -2,7 +2,7 @@
 
 For more information about Azure, refer to the official https://docs.microsoft.com/en-us/azure/?product=featured[Azure documentation.]
 
-=== Environment
+== Environment
 
 Microsoft provides multiple https://docs.microsoft.com/en-us/cli/azure/cloud?view=azure-cli-latest[clouds] for compliance with regional laws, which are available for your use:
 
@@ -11,11 +11,11 @@ Microsoft provides multiple https://docs.microsoft.com/en-us/cli/azure/cloud?vie
 * AzureChinaCloud
 * AzureUSGovernmentCloud
 
-=== Location
+== Location
 
 Configure the cluster and node https://docs.microsoft.com/en-us/azure/virtual-machines/regions[location].
 
-=== Resource Group
+== Resource Group
 
 A resource group is a container that holds related resources for an Azure solution. The resource group can include all the resources for the solution, or only those resources that you want to manage as a group. You decide how you want to allocate resources to resource groups based on what makes the most sense for your organization. Generally, add resources that share the same lifecycle to the same resource group so you can easily deploy, update, and delete them as a group.
 
@@ -23,15 +23,15 @@ Use an existing resource group or enter a resource group name and one will be cr
 
 For information on managing resource groups, see the https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resource-groups-portal[Azure documentation.]
 
-=== Availability Set (unmanaged)
+== Availability Set (unmanaged)
 
 Name or ID of an existing https://docs.microsoft.com/en-us/azure/virtual-machines/availability-set-overview[availability set] to add the VM to.
 
-=== Image
+== Image
 
 The name of the operating system image provided as an ARM resource identifier. Requires using managed disk.
 
-=== VM Size
+== VM Size
 
 Choose a size for each VM in the node pool. For details about each VM size, see https://azure.microsoft.com/en-us/pricing/details/virtual-machines/linux/[this page.]
 
