--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc
@@ -1,11 +1,11 @@
 = Workload with Ingress Quick Start
 :experimental:
 
-=== Prerequisite
+== Prerequisite
 
 You have a running cluster with at least 1 node.
 
-=== 1. Deploying a Workload
+== 1. Deploying a Workload
 
 You're ready to create your first Kubernetes https://kubernetes.io/docs/concepts/workloads/[workload]. A workload is an object that includes pods along with other files and info needed to deploy your application.
 
@@ -26,7 +26,7 @@ For this workload, you'll be deploying the application Rancher Hello-World.
 * Your workload is deployed. This process might take a few minutes to complete.
 * When your workload completes deployment, it's assigned a state of *Active*. You can view this status from the project's *Workloads* page.
 
-=== 2. Expose The Application Via An Ingress
+== 2. Expose The Application Via An Ingress
 
 Now that the application is up and running, it needs to be exposed so that other services can connect.
 
@@ -43,17 +43,17 @@ Now that the application is up and running, it needs to be exposed so that other
 
 *Result:* The application is assigned a `sslip.io` address and exposed. It may take a minute or two to populate.
 
-=== View Your Application
+== View Your Application
 
 From the *Deployments* page, find the *Endpoints* column for your deployment and click on an endpoint. The endpoints available will depend on how you configured the port you added to your deployment. For endpoints where you do not see a randomly assigned port, append the path you specified when creating the ingress to the IP address. For example, if your endpoint looks like `xxx.xxx.xxx.xxx` or `+https://xxx.xxx.xxx.xxx+` change it to `xxx.xxx.xxx.xxx/hello` or `+https://xxx.xxx.xxx.xxx/hello+`.
 
 Your application will open in a separate window.
 
-==== Finished
+=== Finished
 
 Congratulations! You have successfully deployed a workload exposed via an ingress.
 
-==== What's Next?
+=== What's Next?
 
 When you're done using your sandbox, destroy the Rancher Server and your cluster. See one of the following:
 
