--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/troubleshooting/troubleshooting.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/troubleshooting/troubleshooting.adoc
@@ -2,7 +2,7 @@
 
 This section describes how to troubleshoot an installation of Rancher on a Kubernetes cluster.
 
-=== Relevant Namespaces
+== Relevant Namespaces
 
 Most of the troubleshooting will be done on objects in these 3 namespaces.
 
@@ -10,7 +10,7 @@ Most of the troubleshooting will be done on objects in these 3 namespaces.
 * `ingress-nginx` - Ingress controller pods and services.
 * `cert-manager` - `cert-manager` pods.
 
-=== "default backend - 404"
+== "default backend - 404"
 
 A number of things can cause the ingress-controller not to forward traffic to your rancher instance. Most of the time its due to a bad ssl configuration.
 
@@ -19,7 +19,7 @@ Things to check
 * <<check-if-rancher-is-running,Is Rancher Running>>
 * <<cert-cn-is-kubernetes-ingress-controller-fake-certificate,Cert CN is "Kubernetes Ingress Controller Fake Certificate">>
 
-=== Check if Rancher is Running
+== Check if Rancher is Running
 
 Use `kubectl` to check the `cattle-system` system namespace and see if the Rancher pods are in a Running state.
 
@@ -47,7 +47,7 @@ Events:
   Normal   Started                11m   kubelet, localhost  Started container
 ----
 
-=== Check the Rancher Logs
+== Check the Rancher Logs
 
 Use `kubectl` to list the pods.
 
@@ -64,7 +64,7 @@ Use `kubectl` and the pod name to list the logs from the pod.
 kubectl -n cattle-system logs -f rancher-784d94f59b-vgqzh
 ----
 
-=== Cert CN is "Kubernetes Ingress Controller Fake Certificate"
+== Cert CN is "Kubernetes Ingress Controller Fake Certificate"
 
 Use your browser to check the certificate details. If it says the Common Name is "Kubernetes Ingress Controller Fake Certificate", something may have gone wrong with reading or issuing your SSL cert.
 
@@ -75,7 +75,7 @@ If you are using LetsEncrypt to issue certs, it can sometimes take a few minutes
 ====
 
 
-=== Checking for issues with cert-manager issued certs (Rancher Generated or LetsEncrypt)
+== Checking for issues with cert-manager issued certs (Rancher Generated or LetsEncrypt)
 
 `cert-manager` has 3 parts.
 
@@ -106,7 +106,7 @@ Events:
   Warning  ErrGetKeyPair  9m (x16 over 19m)   cert-manager  Error getting keypair for CA issuer: secret "tls-rancher" not found
 ----
 
-=== Checking for Issues with Your Own SSL Certs
+== Checking for Issues with Your Own SSL Certs
 
 Your certs get applied directly to the Ingress object in the `cattle-system` namespace.
 
@@ -126,7 +126,7 @@ kubectl -n ingress-nginx logs -f nginx-ingress-controller-rfjrq nginx-ingress-co
 W0705 23:04:58.240571       7 backend_ssl.go:49] error obtaining PEM from secret cattle-system/tls-rancher-ingress: error retrieving secret cattle-system/tls-rancher-ingress: secret cattle-system/tls-rancher-ingress was not found
 ----
 
-=== No matches for kind "Issuer"
+== No matches for kind "Issuer"
 
 The SSL configuration option you have chosen requires cert-manager to be installed before installing Rancher or else the following error is shown:
 
@@ -136,17 +136,17 @@ Error: validation failed: unable to recognize "": no matches for kind "Issuer" i
 
 Install cert-manager and try installing Rancher again.
 
-=== Canal Pods show READY 2/3
+== Canal Pods show READY 2/3
 
 The most common cause of this issue is port 8472/UDP is not open between the nodes. Check your local firewall, network routing or security groups.
 
 Once the network issue is resolved, the `canal` pods should timeout and restart to establish their connections.
 
-=== nginx-ingress-controller Pods show RESTARTS
+== nginx-ingress-controller Pods show RESTARTS
 
 The most common cause of this issue is the `canal` pods have failed to establish the overlay network. See <<canal-pods-show-ready-23,canal Pods show READY `2/3`>> for troubleshooting.
 
-=== Failed to dial to /var/run/docker.sock: ssh: rejected: administratively prohibited (open failed)
+== Failed to dial to /var/run/docker.sock: ssh: rejected: administratively prohibited (open failed)
 
 Some causes of this error include:
 
@@ -164,23 +164,23 @@ See https://docs.docker.com/install/linux/linux-postinstall/#manage-docker-as-a-
  $ nc xxx.xxx.xxx.xxx 22
  SSH-2.0-OpenSSH_6.6.1p1 Ubuntu-2ubuntu2.10
 
-=== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: Error configuring SSH: ssh: no key found
+== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: Error configuring SSH: ssh: no key found
 
 The key file specified as `ssh_key_path` cannot be accessed. Make sure that you specified the private key file (not the public key, `.pub`), and that the user that is running the `rke` command can access the private key file.
 
-=== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: ssh: handshake failed: ssh: unable to authenticate, attempted methods [none publickey], no supported methods remain
+== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: ssh: handshake failed: ssh: unable to authenticate, attempted methods [none publickey], no supported methods remain
 
 The key file specified as `ssh_key_path` is not correct for accessing the node. Double-check if you specified the correct `ssh_key_path` for the node and if you specified the correct user to connect with.
 
-=== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: Error configuring SSH: ssh: cannot decode encrypted private keys
+== Failed to dial ssh using address [xxx.xxx.xxx.xxx:xx]: Error configuring SSH: ssh: cannot decode encrypted private keys
 
 If you want to use encrypted private keys, you should use `ssh-agent` to load your keys with your passphrase. If the `SSH_AUTH_SOCK` environment variable is found in the environment where the `rke` command is run, it will be used automatically to connect to the node.
 
-=== Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running?
+== Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running?
 
 The node is not reachable on the configured `address` and `port`.
 
-=== Agent reports TLS errors
+== Agent reports TLS errors
 
 When using Rancher, you may encounter error messages from the `fleet-agent`, `system-agent`, or `cluster-agent`, such as the message below:
 
@@ -190,7 +190,7 @@ tls: failed to verify certificate: x509: failed to load system roots and no root
 
 This occurs when Rancher was configured with `agent-tls-mode` set to `strict`, but couldn't find cacerts in the `cacert` setting. To resolve the issue, set the `agent-tls-mode` to `system-store`, or upload the CA for Rancher as described in xref:../resources/tls-secrets.adoc[Adding TLS Secrets].
 
-=== New Cluster Deployment is stuck in "Waiting for Agent to check in"
+== New Cluster Deployment is stuck in "Waiting for Agent to check in"
 
 When Rancher has `agent-tls-mode` set to `strict`, new clusters may fail to provision and report a generic "Waiting for Agent to check in" error message. The root cause of this is similar to the above case of TLS errors - Rancher's agent can't determine which CA Rancher is using (or can't verify that Rancher's cert is actually signed by the specified certificate authority).
 
