--- a/versions/v2.8/modules/en/pages/observability/istio/configuration/pod-security-policies.adoc
+++ b/versions/v2.8/modules/en/pages/observability/istio/configuration/pod-security-policies.adoc
@@ -20,7 +20,7 @@ To enable pod security policy support when creating a Kubernetes cluster in the 
 . <<2-enable-the-cni,Enable the CNI>>
 . <<3-verify-that-the-cni-is-working,Verify that the CNI is working.>>
 
-=== 1. Set the PodSecurityPolicy to unrestricted
+== 1. Set the PodSecurityPolicy to unrestricted
 
 An unrestricted PSP allows Istio to be installed.
 
@@ -32,7 +32,7 @@ Set the PSP to `unrestricted` in the project where is Istio is installed, or the
 . Find the *Project: System* and select the *⋮ > Edit Config*.
 . Change the Pod Security Policy option to be unrestricted, then click *Save*.
 
-=== 2. Enable the CNI
+== 2. Enable the CNI
 
 When installing or upgrading Istio through *Apps,*
 
@@ -48,6 +48,6 @@ istio_cni.enabled: true
 
 Istio should install successfully with the CNI enabled in the cluster.
 
-=== 3. Verify that the CNI is working
+== 3. Verify that the CNI is working
 
 Verify that the CNI is working by deploying a https://istio.io/latest/docs/examples/bookinfo/[sample application] or deploying one of your own applications.
