--- a/versions/v2.8/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -2,7 +2,7 @@
 
 If you are migrating Rancher to a new Kubernetes cluster, you don't need to install Rancher on the new cluster first. If Rancher is restored to a new cluster with Rancher already installed, it can cause problems.
 
-=== Prerequisites
+== Prerequisites
 
 These instructions assume that you have xref:back-up.adoc[created a backup] and  already installed a new Kubernetes cluster where Rancher will be deployed. The backup is specific to the Rancher application and can only migrate the Rancher application.
 
@@ -19,7 +19,7 @@ Rancher can be installed on any Kubernetes cluster, including hosted Kubernetes 
 
 Since Rancher can be installed on any Kubernetes cluster, you can use this backup and restore method to migrate Rancher from one Kubernetes cluster to any other Kubernetes cluster. This method _only_ migrates Rancher-related resources and won't affect other applications on the cluster. Refer to the https://www.suse.com/lifecycle/[support matrix] to identify which Kubernetes cluster types and versions are supported for your Rancher version.
 
-=== 1. Install the rancher-backup Helm chart
+== 1. Install the rancher-backup Helm chart
 
 Install the https://github.com/rancher/backup-restore-operator/tags[`rancher-backup chart`]:
 
@@ -62,7 +62,7 @@ For an *air-gapped environment*, use the following Helm value to pull the `backu
 ====
 
 
-=== 2. Restore from backup using a Restore custom resource
+== 2. Restore from backup using a Restore custom resource
 
 . When using S3 object storage as the backup source for a restore that requires credentials, create a `Secret` object in this cluster to add the S3 credentials. The secret data must have two keys - `accessKey`, and `secretKey`, that contain the S3 credentials.
 +
@@ -158,11 +158,11 @@ kubectl logs -n cattle-resources-system --tail 100 -f -l app.kubernetes.io/insta
 
  .. Once the Restore resource has the status `Completed`, you can continue the cert-manager and Rancher installation.
 
-=== 3. Install cert-manager
+== 3. Install cert-manager
 
 Follow the steps to link:../../installation-and-upgrade/install-rancher.adoc#4-install-cert-manager[install cert-manager] in the documentation about installing cert-manager on Kubernetes.
 
-=== 4. Bring up Rancher with Helm
+== 4. Bring up Rancher with Helm
 
 Use the same version of Helm to install Rancher, that was used on the first cluster.
 
@@ -195,7 +195,7 @@ helm install rancher rancher-latest/rancher -n cattle-system -f rancher-values.y
 ====
 
 
-=== 5. Redirect Traffic to the New Cluster
+== 5. Redirect Traffic to the New Cluster
 
 After migration completes, update your DNS records and any load balancers, so that traffic is routed correctly to the migrated cluster. Remember that you must use the same hostname that was set as the server URL in the original cluster.
 
