--- a/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
@@ -29,7 +29,7 @@ For users who didn't rotate their webhook certificates, and they have expired af
 ====
 
 
-=== Certificate Rotation
+== Certificate Rotation
 
 Rancher launched Kubernetes clusters have the ability to rotate the auto-generated certificates through the UI.
 
@@ -42,7 +42,7 @@ Rancher launched Kubernetes clusters have the ability to rotate the auto-generat
 
 *Results:* The selected certificates will be rotated and the related services will be restarted to start using the new certificate.
 
-=== Additional Notes
+== Additional Notes
 
 [tabs]
 ======
