--- a/versions/v2.8/modules/en/pages/cluster-admin/project-admin/pod-security-policies.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/project-admin/pod-security-policies.adoc
@@ -10,12 +10,12 @@ These cluster options are only available for xref:../../cluster-deployment/launc
 
 You can always assign a pod security policy (PSP) to an existing project if you didn't assign one during creation.
 
-=== Prerequisites
+== Prerequisites
 
 * Create a Pod Security Policy within Rancher. Before you can assign a default PSP to an existing project, you must have a PSP available for assignment. For instruction, see xref:../../security/psp/create.adoc[Creating Pod Security Policies].
 * Assign a default Pod Security Policy to the project's cluster. You can't assign a PSP to a project until one is already applied to the cluster. For more information, see xref:../../security/psp/add.adoc[the documentation about adding a pod security policy to a cluster].
 
-=== Applying a Pod Security Policy
+== Applying a Pod Security Policy
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, go to the cluster where you want to move a namespace and click *Explore*.
