--- a/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/eks/configuration.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/eks/configuration.adoc
@@ -1,6 +1,6 @@
 = EKS Cluster Configuration Reference
 
-=== Account Access
+== Account Access
 
 Complete each drop-down and field using the information obtained for your IAM policy.
 
@@ -14,7 +14,7 @@ Complete each drop-down and field using the information obtained for your IAM po
 | Select the cloud credentials that you created for your IAM policy. For more information on creating cloud credentials in Rancher, refer to xref:../../../rancher-admin/users/settings/manage-cloud-credentials.adoc[this page.]
 |===
 
-=== Service Role
+== Service Role
 
 Choose a https://docs.aws.amazon.com/IAM/latest/UserGuide/using-service-linked-roles.html[service role].
 
@@ -28,15 +28,15 @@ Choose a https://docs.aws.amazon.com/IAM/latest/UserGuide/using-service-linked-r
 | If you choose this role, Rancher lets you choose from service roles that you're already created within AWS. For more information on creating a custom service role in AWS, see the https://docs.aws.amazon.com/IAM/latest/UserGuide/using-service-linked-roles.html#create-service-linked-role[Amazon documentation].
 |===
 
-=== Secrets Encryption
+== Secrets Encryption
 
 Optional: To encrypt secrets, select or enter a key created in https://docs.aws.amazon.com/kms/latest/developerguide/overview.html[AWS Key Management Service (KMS)]
 
-=== API Server Endpoint Access
+== API Server Endpoint Access
 
 Configuring Public/Private API access is an advanced use case. For details, refer to the EKS cluster endpoint access control https://docs.aws.amazon.com/eks/latest/userguide/cluster-endpoint.html[documentation.]
 
-=== Private-only API Endpoints
+== Private-only API Endpoints
 
 If you enable private and disable public API endpoint access when creating a cluster, then there is an extra step you must take in order for Rancher to connect to the cluster successfully. In this case, a pop-up will be displayed with a command that you will run on the cluster to register it with Rancher. Once the cluster is provisioned, you can run the displayed command anywhere you can connect to the cluster's Kubernetes API.
 
@@ -45,7 +45,7 @@ There are two ways to avoid this extra manual step:
 * You can create the cluster with both private and public API endpoint access on cluster creation. You can disable public access after the cluster is created and in an active state and Rancher will continue to communicate with the EKS cluster.
 * You can ensure that Rancher shares a subnet with the EKS cluster. Then security groups can be used to enable Rancher to communicate with the cluster's API endpoint. In this case, the command to register the cluster is not needed, and Rancher will be able to communicate with your cluster. For more information on configuring security groups, refer to the https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html[security groups documentation].
 
-=== Public Access Endpoints
+== Public Access Endpoints
 
 Optionally limit access to the public endpoint via explicit CIDR blocks.
 
@@ -58,7 +58,7 @@ One of the following is required to enable private access:
 
 For more information about public and private access to the cluster endpoint, refer to the https://docs.aws.amazon.com/eks/latest/userguide/cluster-endpoint.html[Amazon EKS documentation.]
 
-=== Subnet
+== Subnet
 
 |===
 | Option | Description
@@ -75,7 +75,7 @@ For more information, refer to the AWS documentation for https://docs.aws.amazon
 * https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html[What Is Amazon VPC?]
 * https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Subnets.html[VPCs and Subnets]
 
-=== Security Group
+== Security Group
 
 Amazon Documentation:
 
@@ -83,7 +83,7 @@ Amazon Documentation:
 * https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html[Security Groups for Your VPC]
 * https://docs.aws.amazon.com/vpc/latest/userguide/getting-started-ipv4.html#getting-started-create-security-group[Create a Security Group]
 
-=== Logging
+== Logging
 
 Configure control plane logs to send to Amazon CloudWatch. You are charged the standard CloudWatch Logs data ingestion and storage costs for any logs sent to CloudWatch Logs from your clusters.
 
@@ -91,13 +91,13 @@ Each log type corresponds to a component of the Kubernetes control plane. To lea
 
 For more information on EKS control plane logging, refer to the official https://docs.aws.amazon.com/eks/latest/userguide/control-plane-logs.html[documentation.]
 
-=== Managed Node Groups
+== Managed Node Groups
 
 Amazon EKS managed node groups automate the provisioning and lifecycle management of nodes (Amazon EC2 instances) for Amazon EKS Kubernetes clusters.
 
 For more information about how node groups work and how they are configured, refer to the https://docs.aws.amazon.com/eks/latest/userguide/managed-node-groups.html[EKS documentation.]
 
-==== User-provided Launch Templates
+=== User-provided Launch Templates
 
 You can provide your own launch template ID and version to configure the EC2 instances in a node group. If you provide the launch template, none of the template settings will be configurable from Rancher. You must set all of the required options listed below in your launch template.
 
@@ -138,11 +138,11 @@ You can't directly update a node group to a newer Kubernetes version if the node
 ====
 
 
-==== Rancher-managed Launch Templates
+=== Rancher-managed Launch Templates
 
 If you do not specify a launch template, then you will be able to configure the above options in the Rancher UI and all of them can be updated after creation. In order to take advantage of all of these options, Rancher will create and manage a launch template for you. Each cluster in Rancher will have one Rancher-managed launch template and each managed node group that does not have a specified launch template will have one version of the managed launch template. The name of this launch template will have the prefix "rancher-managed-lt-" followed by the display name of the cluster. In addition, the Rancher-managed launch template will be tagged with the key "rancher-managed-template" and value "do-not-modify-or-delete" to help identify it as Rancher-managed. It is important that this launch template and its versions not be modified, deleted, or used with any other clusters or managed node groups. Doing so could result in your node groups being "degraded" and needing to be destroyed and recreated.
 
-==== Custom AMIs
+=== Custom AMIs
 
 If you specify a custom AMI, whether in a launch template or in Rancher, then the image must be https://aws.amazon.com/premiumsupport/knowledge-center/eks-custom-linux-ami/[configured properly] and you must provide user data to https://docs.aws.amazon.com/eks/latest/userguide/launch-templates.html#launch-template-custom-ami[bootstrap the node]. This is considered an advanced use case and understanding the requirements is imperative.
 
@@ -155,7 +155,7 @@ The GPU enabled instance setting in Rancher is ignored if a custom AMI is provid
 ====
 
 
-==== Spot instances
+=== Spot instances
 
 Spot instances are now https://docs.aws.amazon.com/eks/latest/userguide/managed-node-groups.html#managed-node-group-capacity-types-spot[supported by EKS]. If a launch template is specified, Amazon recommends that the template not provide an instance type. Instead, Amazon recommends providing multiple instance types. If the "Request Spot Instances" checkbox is enabled for a node group, then you will have the opportunity to provide multiple instance types.
 
@@ -166,7 +166,7 @@ Any selection you made in the instance type dropdown will be ignored in this sit
 ====
 
 
-==== Node Group Settings
+=== Node Group Settings
 
 The following settings are also configurable. All of these except for the "Node Group Name" are editable after the node group is created.
 
@@ -192,11 +192,11 @@ The following settings are also configurable. All of these except for the "Node 
 | These are tags for the managed node group and do not propagate to any of the associated resources.
 |===
 
-=== Self-managed Amazon Linux Nodes
+== Self-managed Amazon Linux Nodes
 
 You can register an EKS cluster containing self-managed Amazon Linux nodes. You must configure this type of cluster according to the instructions in the official AWS documentation for https://docs.aws.amazon.com/eks/latest/userguide/launch-workers.html[launching self-managed Amazon Linux nodes]. EKS clusters containing self-managed Amazon Linux nodes are usually operated by the https://karpenter.sh/docs/[Karpenter] project. After you provision an EKS cluster containing self-managed Amazon Linux nodes, xref:../../register-existing-clusters.adoc[register the cluster] so it can be managed by Rancher. However, the nodes won't be visible in the Rancher UI.
 
-=== IAM Roles for Service Accounts
+== IAM Roles for Service Accounts
 
 An Applications Deployment running on an EKS cluster can make requests to AWS services via IAM permissions. These applications must sign their requests with AWS credentials. IAM roles for service accounts manage these credentials using an AWS OIDC endpoint. Rather than distributing AWS credentials to containers or relying on an EC2 instance's role, you can link an https://docs.aws.amazon.com/eks/latest/userguide/iam-roles-for-service-accounts.html[IAM role to a Kubernetes service account] and configure your Pods to use this account.
 
@@ -214,7 +214,7 @@ To enable IAM roles for service accounts:
 . https://docs.aws.amazon.com/eks/latest/userguide/pod-configuration.html[Configure Pods to use a Kubernetes service account]
 . https://docs.aws.amazon.com/eks/latest/userguide/iam-roles-for-service-accounts-minimum-sdk.html[Use a supported AWS SDK]
 
-=== Configuring the Refresh Interval
+== Configuring the Refresh Interval
 
 The `eks-refresh-cron` setting is deprecated. It has been migrated to the `eks-refresh` setting, which is an integer representing seconds.
 
