--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/adapter-requirements.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/adapter-requirements.adoc
@@ -1,6 +1,6 @@
 = Prerequisites
 
-=== 1. Setting Up License Manager and Purchasing Support
+== 1. Setting Up License Manager and Purchasing Support
 
 First, complete the https://docs.aws.amazon.com/license-manager/latest/userguide/getting-started.html[first step] of the license manager one-time setup.
 Next, go to the AWS Marketplace. Locate the "Rancher Premium Support Billing Container Starter Pack". Purchase at least one entitlement.
@@ -9,7 +9,7 @@ If you have installed Rancher using the "Rancher Setup" AWS Marketplace offering
 
 NOTE: Each entitlement grants access to support for a certain amount of nodes. You can purchase more licenses as necessary later on.
 
-=== 2. Create an EKS Cluster
+== 2. Create an EKS Cluster
 
 Follow the xref:../../rancher-on-amazon-eks.adoc[Rancher docs] to create an EKS cluster. When you get to the link:../../rancher-on-amazon-eks.adoc#8-install-the-rancher-helm-chart[final step to install Rancher], *stop and return to this page*. This cluster will need to meet the following requirements:
 
@@ -19,7 +19,7 @@ Follow the xref:../../rancher-on-amazon-eks.adoc[Rancher docs] to create an EKS 
 * Each node in the cluster has access to the license manager service.
 * Each node in the cluster has access to global endpoints for the STS service.
 
-=== 3. Install Rancher
+== 3. Install Rancher
 
 In addition to the options specified to install Rancher in the link:../../rancher-on-amazon-eks.adoc#8-install-the-rancher-helm-chart[Rancher docs], you will also need to enable extra metrics.
 This can be done through the Helm CLI through the following options:
@@ -40,11 +40,11 @@ extraEnv:
 
 You will also need to install Rancher version 2.6.7 or higher.
 
-=== 4. Create an OIDC Provider
+== 4. Create an OIDC Provider
 
 Follow the https://docs.aws.amazon.com/eks/latest/userguide/enable-iam-roles-for-service-accounts.html[AWS documentation] to create an OIDC provider for the cluster specified in the previous section.
 
-=== 5. Create an IAM Role
+== 5. Create an IAM Role
 
 An IAM role is required for the CSP adapter to check-in/check-out entitlements.
 
