--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -2,7 +2,7 @@
 
 Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
 
-=== Install the Helm CLI
+== Install the Helm CLI
 
 include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 
@@ -14,7 +14,7 @@ chmod +x get_helm.sh
 sudo ./get_helm.sh
 ----
 
-=== Install cert-manager
+== Install cert-manager
 
 Add the cert-manager Helm repository:
 
@@ -58,7 +58,7 @@ kubectl rollout status deployment -n cert-manager cert-manager
 kubectl rollout status deployment -n cert-manager cert-manager-webhook
 ----
 
-=== Install Rancher
+== Install Rancher
 
 Next you can install Rancher itself. First, add the Helm repository:
 
@@ -97,7 +97,7 @@ If you don't intend to send telemetry data, opt out xref:../../../faq/telemetry.
 ====
 
 
-=== Additional Resources
+== Additional Resources
 
 These resources could be helpful when installing Rancher:
 
