--- a/versions/v2.8/modules/en/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
+++ b/versions/v2.8/modules/en/pages/observability/istio/configuration/selectors-and-scrape-configurations.adoc
@@ -6,7 +6,7 @@ This ensures you can view traffic, metrics and graphs for resources deployed in 
 
 If you would like to limit Prometheus to specific namespaces, set `prometheus.prometheusSpec.ignoreNamespaceSelectors=true`. Once you do this, you must perform some additional configuration to continue to monitor your resources.
 
-=== Limiting Monitoring to Specific Namespaces by Setting ignoreNamespaceSelectors to True
+== Limiting Monitoring to Specific Namespaces by Setting ignoreNamespaceSelectors to True
 
 To limit monitoring to specific namespaces, you will edit the `ignoreNamespaceSelectors` Helm chart option. You will configure this option when installing or upgrading the Monitoring Helm chart:
 
@@ -15,14 +15,14 @@ To limit monitoring to specific namespaces, you will edit the `ignoreNamespaceSe
 
 *Result:* Prometheus will be limited to specific namespaces  which means one of the following configurations will need to be set up to continue to view data in various dashboards
 
-=== Enabling Prometheus to Detect Resources in Other Namespaces
+== Enabling Prometheus to Detect Resources in Other Namespaces
 
 There are two different ways to enable Prometheus to detect resources in other namespaces when `prometheus.prometheusSpec.ignoreNamespaceSelectors=true`:
 
 * *Monitoring specific namespaces:* Add a Service Monitor or Pod Monitor in the namespace with the targets you want to scrape.
 * *Monitoring across namespaces:* Add an `additionalScrapeConfig` to your rancher-monitoring instance to scrape all targets in all namespaces.
 
-=== Monitoring Specific Namespaces: Create a Service Monitor or Pod Monitor
+== Monitoring Specific Namespaces: Create a Service Monitor or Pod Monitor
 
 This option allows you to define which specific services or pods you would like monitored in a specific namespace.
 
@@ -79,7 +79,7 @@ spec:
       targetLabel: pod_name
 ----
 
-=== Monitoring across namespaces: Set ignoreNamespaceSelectors to False
+== Monitoring across namespaces: Set ignoreNamespaceSelectors to False
 
 This enables monitoring across namespaces by giving Prometheus additional scrape configurations.
 
