--- a/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc
+++ b/versions/v2.8/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc
@@ -1,13 +1,13 @@
 = Advanced Configuration
 
-=== Alertmanager
+== Alertmanager
 
 For information on configuring the Alertmanager custom resource, see xref:alertmanager.adoc[this page.]
 
-=== Prometheus
+== Prometheus
 
 For information on configuring the Prometheus custom resource, see xref:prometheus.adoc[this page.]
 
-=== PrometheusRules
+== PrometheusRules
 
 For information on configuring the Prometheus custom resource, see xref:prometheusrules.adoc[this page.]
