--- a/versions/v2.8/modules/en/pages/rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc
@@ -21,7 +21,7 @@ There are several ways to share templates:
 * Make the RKE template public, sharing it with all users in the Rancher setup
 * Share template ownership with users who are trusted to modify the template
 
-=== Sharing Templates with Specific Users or Groups
+== Sharing Templates with Specific Users or Groups
 
 To allow users or groups to create clusters using your template, you can give them the basic *User* access level for the template.
 
@@ -35,7 +35,7 @@ To allow users or groups to create clusters using your template, you can give th
 
 *Result:* The user or group can create clusters using the template.
 
-=== Sharing Templates with All Users
+== Sharing Templates with All Users
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . In the left navigation menu, click menu:RKE1 Configuration[RKE Templates].
@@ -45,7 +45,7 @@ To allow users or groups to create clusters using your template, you can give th
 
 *Result:* All users in the Rancher setup can create clusters using the template.
 
-=== Sharing Ownership of Templates
+== Sharing Ownership of Templates
 
 If you are the creator of a template, you might want to delegate responsibility for maintaining and updating a template to another user or group.
 
