--- a/versions/v2.8/modules/en/pages/security/rancher-security-best-practices.adoc
+++ b/versions/v2.8/modules/en/pages/security/rancher-security-best-practices.adoc
@@ -1,6 +1,6 @@
 = Rancher Security Best Practices
 
-=== Restrict Public Access to /version and /rancherversion Path
+== Restrict Public Access to /version and /rancherversion Path
 
 The upstream (local) Rancher instance provides information about the Rancher version it is running and the Go version that was used to build it. That information is accessible via the `/version` path, which is used for tasks such as automating version bumps, or confirming that a deployment was successful. The upstream instance also provides Rancher version information accessible via the `/rancherversion` path.
 
